# LingVerse

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py
app/dependencies/: auth.py
app/infra/: elasticsearch_sdk.py  mongo_db_sdk.py  postgresql_sdk.py  redis_sdk.py
app/middlewares/: auth.py  request_id.py  request_timer.py
app/models/: base.py  conversation.py  llm_model.py  memory.py  message.py  person.py  tool.py
app/routers/: conversation_router.py  llm_router.py  memory_router.py  person_router.py  tool_router.py
app/utils/: api_response.py  config.py  datetime_utils.py  logger.py  request_id.py
docs/: msg_def.md
scripts/: __init__.py  format.py  llm_model_collection_op.py  person_collection_op.py
tests/: conftest.py  test_conversation_router.py  test_llm_router.py
