[tool.poetry]
name = "lingverse"
version = "0.1.0"
description = "A modular multi-agent virtual world system."
authors = ["liangrui <liangrui.online@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false
packages = [
    { include = "app" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
loguru = "^0.7.2"
motor = "^3.6.0"
elasticsearch = {extras = ["async"], version = "^8.16.0"}
aioredis = "^2.0.1"
asyncpg = "^0.30.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
openai = "^1.55.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.poetry.scripts]
lingverse = "app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
